[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["database-test"]
database-test = []

[dependencies]
axum = "0.4.8"
hyper = { version = "0.14.28", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
http-body = "0.4.6"
validator = { version = "0.14.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenv = "0.15.0"
tower-http = { version = "0.2.5", features = ["cors"] }
